--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,5 @@ reportlab==4.0.4
 django-cors-headers==4.2.0
 django-allauth==0.56.1
 django-widget-tweaks==1.5.0
+python-dotenv==1.0.0
+PyMySQL==1.1.0
