Fix cPanel static files serving and deployment configuration
## Static Files Configuration
- Added WhiteNoise middleware for static files serving in production
- Updated Django settings to use correct static files paths for cPanel Passenger
- Fixed STATIC_ROOT to match where collectstatic actually places files
- Updated requirements.txt with whitenoise==6.11.0

## Environment Configuration
- Updated .env.cpanel with correct static/media paths for cPanel subdomain
- Fixed settings.py fallback values to match actual cPanel directory structure
- Removed problematic .htaccess file from repository

## Repository Maintenance
- Added .htaccess and passenger_wsgi.py to .gitignore
- Created comprehensive DEPLOYMENT_GUIDE.md for cPanel setup
- Updated .gitignore to exclude server configuration files

## Problem Solved
- Fixed 404 errors for static files (CSS/JS) on pos.navipos.co.ke
- Resolved MIME type errors by enabling proper static files serving
- Static files now served correctly through WhiteNoise middleware

The static files should now load correctly at https://pos.navipos.co.ke/static/ after collectstatic is run on the server.

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,10 @@ db.sqlite3-journal
 .env.production.local
 .env.cpanel
 
+# Server configuration files
+.htaccess
+passenger_wsgi.py
+
 # Static files
 staticfiles/
 static_collected/
