--- a/.env.cpanel
+++ b/.env.cpanel
@@ -2,9 +2,6 @@
 # Domain: pos.navipos.co.ke
 # Copy this file to .env when deploying to cPanel
 
-# Environment detection
-CPANEL=True
-
 # Basic Django Settings
 SECRET_KEY=your-super-secret-production-key-change-this-immediately
 DEBUG=False
@@ -13,46 +10,27 @@ DEBUG=False
 ALLOWED_HOSTS=pos.navipos.co.ke,www.pos.navipos.co.ke,navipos.co.ke
 
 # Database Configuration for MySQL (cPanel)
-# Update these with your actual cPanel MySQL database details
 DATABASE_NAME=naviposc_hyperpos
 DATABASE_USER=naviposc_posuser
 DATABASE_PASSWORD=hyperpos2025
 DATABASE_HOST=localhost
 DATABASE_PORT=3306
 
-# Email Configuration (update with your hosting provider's SMTP)
-EMAIL_HOST=mail.navipos.co.ke
-EMAIL_PORT=587
-EMAIL_USE_TLS=True
-EMAIL_HOST_USER=noreply@navipos.co.ke
-EMAIL_HOST_PASSWORD=your_email_password
-
-# Static and Media Files (paths where files are collected)
-# Static files are collected to project's public_html directory for easy deployment
+# Static and Media Files
+STATIC_URL=https://pos.navipos.co.ke/static/
 STATIC_ROOT=public_html/static
+MEDIA_URL=https://pos.navipos.co.ke/media/
 MEDIA_ROOT=public_html/media
 
-# Static and Media URLs (how files are accessed from the web)
-STATIC_URL=https://pos.navipos.co.ke/static/
-MEDIA_URL=https://pos.navipos.co.ke/media/
+# Time Zone
+TIME_ZONE=Africa/Nairobi
 
-# CORS Settings for production
+# CORS Settings
 CORS_ALLOWED_ORIGINS=https://pos.navipos.co.ke,https://www.pos.navipos.co.ke,https://navipos.co.ke
 
-# Time Zone (adjust as needed for Kenya)
-TIME_ZONE=Africa/Nairobi
-DATABASE_HOST=localhost
-DATABASE_PORT=3306
-
-# Email Configuration (update with your hosting provider's SMTP)
+# Email Configuration
 EMAIL_HOST=mail.navipos.co.ke
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
 EMAIL_HOST_USER=noreply@navipos.co.ke
 EMAIL_HOST_PASSWORD=your_email_password
-
-# CORS Settings for production
-CORS_ALLOWED_ORIGINS=https://pos.navipos.co.ke,https://www.pos.navipos.co.ke,https://navipos.co.ke
-
-# Time Zone (adjust as needed for Kenya)
-TIME_ZONE=Africa/Nairobi
