Fix static URLs for cPanel deployment
- Changed STATIC_URL from full domain URL to relative path /static/
- Changed MEDIA_URL from full domain URL to relative path /media/
- This allows cPanel to properly serve static files from public_html/static/
- Django templates will reference /static/ and cPanel maps it to the correct directory

--- a/.env.cpanel
+++ b/.env.cpanel
@@ -17,9 +17,9 @@ DATABASE_HOST=localhost
 DATABASE_PORT=3306
 
 # Static and Media Files
-STATIC_URL=https://pos.navipos.co.ke/static/
+STATIC_URL=/static/
 STATIC_ROOT=public_html/static
-MEDIA_URL=https://pos.navipos.co.ke/media/
+MEDIA_URL=/media/
 MEDIA_ROOT=public_html/media
 
 # Time Zone
