Fix static files serving for cPanel deployment
- Updated STATIC_ROOT and MEDIA_ROOT to use absolute cPanel paths
- Added WhiteNoise MIME type configuration for proper CSS/JS serving
- Created .htaccess file with proper MIME types and caching
- Added security headers for production
- Fixed CORS settings to use HTTPS only
- This should resolve MIME type errors and 404s for static files

--- a/.env.cpanel
+++ b/.env.cpanel
@@ -18,15 +18,15 @@ DATABASE_PORT=3306
 
 # Static and Media Files
 STATIC_URL=/static/
-STATIC_ROOT=public_html/static
+STATIC_ROOT=/home1/naviposc/pos.navipos.co.ke/public_html/static
 MEDIA_URL=/media/
-MEDIA_ROOT=public_html/media
+MEDIA_ROOT=/home1/naviposc/pos.navipos.co.ke/public_html/media
 
 # Time Zone
 TIME_ZONE=Africa/Nairobi
 
 # CORS Settings
-CORS_ALLOWED_ORIGINS=https://pos.navipos.co.ke,https://www.pos.navipos.co.ke,https://navipos.co.ke
+CORS_ALLOWED_ORIGINS=https://pos.navipos.co.ke,https://www.pos.navipos.co.ke
 
 # Email Configuration
 EMAIL_HOST=mail.navipos.co.ke
