Add only essential static files and deployment config
- Updated .gitignore to include only static/css/ and static/js/
- Added .htaccess for proper MIME types and caching
- Added passenger_wsgi.py for cPanel deployment
- Excluded public_html/, media/, and other generated files
- Focus on source CSS/JS files only, not collected static files

--- a/.gitignore
+++ b/.gitignore
@@ -13,16 +13,24 @@ db.sqlite3-journal
 .env.development.local
 .env.test.local
 .env.production.local
-.env.cpanel
+# .env.cpanel - Allow this for deployment template
 
-# Server configuration files
-.htaccess
-passenger_wsgi.py
+# Server configuration files - Allow for deployment
+# .htaccess
+# passenger_wsgi.py
 
-# Static files
+# Static files - only exclude collected/generated directories
 staticfiles/
 static_collected/
 public_html/
+
+# Only allow CSS and JS from source static folder, ignore everything else
+static/*
+!static/css/
+!static/js/
+
+# Media files - ignore all user uploads
+media/
 
 # Media files (uncomment if you don't want to track user uploads)
 # media/
